add project and classpath files